assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;1,100;1,300;1,500&family=Press+Start+2P&display=swap");

html {
  overflow: auto;
}

ol,
ul {
  margin-left: 50px;
}

* {
  font-family: "Poppins", sans-serif;
}

body {
  font-weight: 500;
  background-image: linear-gradient(to right, #7f53ac 0, #657ced 100%);
  color: black;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

p {
  font-family: "Press Start 2P", cursive;
  font-size: 20px;
  color: black;
  text-align: center;
}

h1 {
  font-family: "Press Start 2P", cursive;
  color: white;
  margin-left: 10px;
}

h3 {
  font-family: "Press Start 2P", cursive;
  color: black;
  margin-left: 48%;

}

/* Nabvar max width */
.navbar {
  max-width: 1400px;
  margin: auto;
}

/* Home page buttons */

.btn-modal {
  background-color: #fff;
  padding: 20px;
  border-radius: 1rem;
  text-decoration: none;
  text-align: center;
  font-size: 1.5em;
  border: 1px solid #ccc;
  width: 250px;
}

.btn-modal:hover {
  background-color: #c7a1f5;
}

.buttons {
  position: relative;
}

/* Modal */
.wrapper {
  position: relative;
  min-height: 90vh;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: linear-gradient(to right, #7f53ac 0, #657ced 100%);
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
}

#inner-modal {
  position: absolute;
  top: -180px;
  color: #000;
  padding: 20px;
  border-radius: 20px;
  background: #fff;
}

/* Hide modal. Help from Codu Community */
.hidden {
  display: none;
}

/* Contact form from W3Schools with some changes*/
input[type="text"],
select,
textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  resize: vertical;
}

input[type="email"],
select,
textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

input[type="submit"]:hover {
  background-color: #c7a1f5;
}

input[type="submit"] {
  background-color: #fff;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.contact-container {
  max-width: 1400px;
  margin: 100px auto;
}

.col-75 {
  width: 75%;
  margin-top: 6px;
  margin: 6px auto 0;
}

.btn-icon {
  height: 50px;
  width: 50px;
  background: none;
  border: none;
  cursor: pointer;
  color: #fff;
  margin-left: 20px;
}

/* Idea from FreeCodeCamp */
svg:hover {
  transform: scale(1.1);
}

.nav-btn {
  margin-right: 20px;
  margin-top: -65px;
  float: right;
  padding-bottom: 50px;
}

/* Score board format */

.score-board {
  background-color: #fff;
  padding: 5px 5px;
}

/* Game grid - Ania Kubow tutorial, adjusted the height and width to make the squares responsive. */
.grid {
  height: 800px;
  width: 800px;
  display: flex;
  flex-wrap: wrap;
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

.grid div {
  height: 100px;
  width: 100px;
  background-color: rgb(255, 255, 255, 0.1);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  border-radius: 4px;
}

/* Make game and contact form responsive */

@media screen and (max-width: 1024px) {
  h1 {
    font-size: larger;
    margin-bottom: 10px;
  }

  ul {
    margin: 0;
  }

  h3 {
    font-family: "Press Start 2P", cursive;
    color: black;
    text-align: center;
    margin-left: 130px;
  }

  .col-75,
  input[type="submit"] {
    width: 100%;
    margin-top: 3px;
    border-radius: 4px;
  }

  .grid {
    height: 800px;
    width: 800px;
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
  }

  .grid div {
    height: 100px;
    width: 100px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
  }
  /* Nabvar buttons */
  .nav-btn {
    margin-left: 40px;
  }

  .btn-icon {
    height: 50px;
    width: 50px;
    background: none;
    cursor: pointer;
    margin-left: 0;
    margin-top: 20px;
  }

  /* Modal buttons  */
  .buttons {
    position: absolute;
    margin-left: 65px;
  }

  .btn-modal {
    margin-top: 20px;
  }

  .contact-container {
    overflow: hidden;
    margin-left: 20px;
    width: 90%;
  }

  #inner-modal {
    width: 100%;
    position: absolute;
    left: -30px;
    top: -120px;
    color: #000;
    padding: 5px;
    border-radius: 20px;
    background: #fff;
  }


}

@media screen and (max-width: 770px) {
  .grid {
    height: 560px;
    width: 560px;
    display: flex;
    flex-wrap: wrap;
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
  }

  .grid div {
    height: 70px;
    width: 70px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
  }
}

@media screen and (max-width: 600px) {

  h1 {
    font-size: larger;
    margin-bottom: 10px;
  }

  ul {
    margin: 0;
  }

  h3 {
    font-family: "Press Start 2P", cursive;
    color: black;
    text-align: center;
    margin-left: 130px;
  }

  .col-75,
  input[type="submit"] {
    width: 100%;
    margin-top: 3px;
    border-radius: 4px;
  }

  .grid {
    height: 360px;
    width: 360px;
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
  }

  .grid div {
    height: 45px;
    width: 45px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
  }
  /* Nabvar buttons */
  .nav-btn {
    margin-left: 20px;
  }

  .btn-icon {
    height: 50px;
    width: 50px;
    background: none;
    cursor: pointer;
    margin-left: 0;
    margin-top: 20px;
  }

  /* Modal buttons  */
  .buttons {
    position: absolute;
    margin-left: 65px;
  }

  .btn-modal {
    margin-top: 20px;
  }

  .contact-container {
    overflow: hidden;
    margin-left: 20px;
    width: 90%;
  }

  #inner-modal {
    width: 100%;
    position: absolute;
    left: -30px;
    top: -120px;
    color: #000;
    padding: 5px;
    border-radius: 20px;
    background: #fff;
  }


}

/* Phone 5/SE size */
@media screen and (max-width: 350px) {

  h1 {
    font-size: larger;
    margin-bottom: 10px;
  }

  ul {
    margin: 0;
  }

  h3 {
    font-family: "Press Start 2P", cursive;
    color: black;
    text-align: center;
    margin-left: 28px;
  }

  .col-75,
  input[type="submit"] {
    width: 100%;
    margin-top: 3px;
    border-radius: 4px;
  }

  .grid {
    height: 280px;
    width: 280px;
    display: flex;
    flex-wrap: wrap;
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
  }

  .grid div {
    height: 35px;
    width: 35px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
  }
  /* Nabvar buttons */
  .nav-btn {
    margin-left: 80px;
  }

  .btn-icon {
    height: 45px;
    width: 45px;
    background: none;
    cursor: pointer;
    margin-left: 0;
    margin-top: 20px;
  }

  /* Modal buttons  */
  .buttons {
    position: absolute;
    margin-left: 35px;
  }

  .btn-modal {
    margin-top: 20px;
  }

  .contact-container {
    overflow: hidden;
    margin-left: 20px;
    width: 90%;
  }

  #inner-modal {
    width: 100%;
    position: absolute;
    left: -30px;
    top: -120px;
    color: #000;
    padding: 5px;
    border-radius: 20px;
    background: #fff;
  }

  .score-board {
    background-color: #fff;
    padding: 5px 5px;
  }

  
}

/* Code from my Milestone project 1 with changes */

.footer {
  /* position: fixed; */
  left: 0;
  bottom: 0;
  padding-top: 5px;
  padding-bottom: 5px;
  width: 100%;
  text-align: center;
  color: #fff;
  font-weight: 100;
}

